--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "craft-rex-date-picker-stander": "^0.1.5",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
